--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -5,12 +5,16 @@ html {
 body {
   font-family : 'Segoe UI', Verdana, sans-serif ;
   font-size: $m-size;
-  box-sizing: border-box
+  // overflow: hidden;
+  box-sizing: border-box;
+  line-height: 1.6;
+  color: #333333;
   // background: linear-gradient(to right, #cfd9df 0%, #e2ebf0 100%) ;
 }
 
 button {
   cursor: pointer;
+  border-radius: 5px;
 }
 button:disabled {
   cursor: not-allowed;
