--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -9,6 +9,7 @@ body {
   box-sizing: border-box;
   line-height: 1.6;
   color: #333333;
+  // background: rgba(0, 0, 0, 0.1);
   // background: linear-gradient(to right, #cfd9df 0%, #e2ebf0 100%) ;
 }
 
