--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -5,6 +5,7 @@ $xl-size :  4.8rem;
 //fonts
 $font-size-small : 0.8rem;
 $font-size-medium : 1.6rem;
+$font-size-xmedium : 1.8rem;
 $font-size-large : 2.4rem;
 $font-size-xlarge : 3.2rem;
 $font-size-xxlarge : 4rem;
