--- a/src/styles/components/_box-layout.scss
+++ b/src/styles/components/_box-layout.scss
@@ -27,6 +27,9 @@
     justify-content: space-between;
     margin: $l-size * 2 0;
     width: 100%;
+    box-shadow: 0px 0.5px white,0px -0.5px white ;
+    -moz-box-shadow: 0px 0.5px white,0px -0.5px white;
+    -webkit-box-shadow: 0px 0.5px white,0px -0.5px white;
 }
 
 .box-layout__title{
@@ -54,6 +57,7 @@
     margin : 0 ;
     // background-color:lightblue;
     font-weight: 700;
+    letter-spacing: 5px;
 }
 
 .box-layout__box{
@@ -64,11 +68,21 @@
 }
 
 .box-layout__button{
-    padding: $s-size;
+    padding: 0 0 0 $s-size;
     background-color: white;
-    color: #ff7300;
+    color: #e06500;
     font-size: 1.8rem;
     font-weight: 700;
     border: none;
     margin : 0 $m-size ;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.box-layout__buttonimg{
+    width: 50px;
+    height: 50px;
+    padding: 0;
+    margin: 0;
 }
