--- a/src/styles/components/_content-container.scss
+++ b/src/styles/components/_content-container.scss
@@ -1,7 +1,5 @@
 .content-container{
     margin: 0 auto;
-    padding: 0 $m-size;
-    max-width: 120rem;
-    display: flex;
-    justify-content: space-between;
+    padding: 0 $l-size;
+    max-width: 130rem;
 }
