--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -4,6 +4,7 @@ $l-size :  3.2rem;
 $xl-size :  4.8rem;
 //fonts
 $font-size-small : 0.8rem;
+$font-size-smedium : 1.3rem;
 $font-size-medium : 1.6rem;
 $font-size-xmedium : 1.8rem;
 $font-size-large : 2.4rem;
@@ -11,3 +12,8 @@ $font-size-xlarge : 3.2rem;
 $font-size-xxlarge : 4rem;
 $font-size-xxxlarge : 4.8rem;
 $desktop-breakpoint : 45rem;
+
+//colors
+$my-orange : #e06500;
+$my-orange-login : #ff7300;
+$my-blue : #1c88bf;
