--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -1,3 +1,17 @@
 .buttons{
-    
+    background: $my-blue;
+    border: none;
+    border-radius: 4px;
+    color: white;
+    display: inline-block;
+    font-size: $font-size-medium;
+    font-weight: 400;
+    letter-spacing: 1.5px;
+    line-height: 1.5;
+    padding: $s-size;
+    text-decoration: none;
+}
+
+.buttons--link{
+    background: none;
 }
