--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,7 +1,7 @@
 .header{
     // background: #282c34;
     // background: radial-gradient(circle, darken(dodgerblue, 10%), #1f4f96, #1b2949, #000);
-    background: #e06500;
+    background: $my-orange;
     // background: rgba(0, 0, 0, 0.6);
     // background : #5f5f5f;
     padding: 0 $m-size;
@@ -10,14 +10,20 @@
     -webkit-box-shadow: 0px 0.5px ;
 }
 
+.header__content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .header__link{
     color: white;
     text-decoration: none;
-    h1 {
+    p {
         margin: 0;
         font-size: $font-size-xlarge;
         font-weight: 600;
-        line-height: 2;
+        line-height: 2.5;
         letter-spacing: 4px;
     }
 }
@@ -27,5 +33,5 @@
 }
 
 .header__link:hover{
-    background-color: darken(#e06500, 10%)!important;
+    background-color: darken($my-orange, 10%)!important;
 }
