--- a/src/styles/components/_page-header.scss
+++ b/src/styles/components/_page-header.scss
@@ -7,23 +7,40 @@
 .page-header__content{
     display: flex;
     flex-direction: column;
-    // // align-items: center;
-    // justify-content: center;
+    justify-content: center;
+    
+    @media (max-width : $desktop-breakpoint) {
+        align-items: center;
+    }
+    
 }
 
 .page-header__action{
-    margin : $m-size;
-    align-self: flex-start;
+    padding-top: $s-size;
+    
 }
 
 .page-header__title{
     font-size: $font-size-xlarge;
-    padding: 0 $m-size;
     margin: 0 ;
     line-height: 2;
     font-weight: 300;
     letter-spacing: 3px;
     span {
         font-weight: 700;
+    }
+
+    @media (max-width : $desktop-breakpoint) {
+        font-size: $font-size-medium;
+        letter-spacing: 1px;
+        font-weight: 350;
+
+        span{
+            font-weight: 650;
+        }
+    }
+
+    @media (max-width : 22rem) {
+        font-size: $font-size-smedium;
     }
 }
