--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -15,3 +15,10 @@
 .buttons--link{
     background: none;
 }
+
+.buttons--remove{
+    background: #888;
+    @media (max-width : $desktop-breakpoint) {
+        width: 100%;
+    }
+}
