--- a/src/styles/myCSS.scss
+++ b/src/styles/myCSS.scss
@@ -7,3 +7,6 @@
 @import "./components/content-container";
 @import "./components/page-header";
 @import "./components/input-group";
+@import "./components/inputs";
+@import "./components/form";
+@import "./components/spinner";
