--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;  
+}
+
 html {
   font-size: 62.5%;
 }
@@ -6,7 +10,6 @@ body {
   font-family : 'Segoe UI', Verdana, sans-serif ;
   font-size: $m-size;
   // overflow: hidden;
-  box-sizing: border-box;
   line-height: 1.6;
   color: #333333;
   // background: rgba(0, 0, 0, 0.1);
