--- a/src/styles/components/_input-group.scss
+++ b/src/styles/components/_input-group.scss
@@ -1,14 +1,19 @@
 .input-group{
-    align-items: center;
     display: flex;
     flex-direction: column;
-    // margin: 0 0 $l-size $m-size;
+    margin-bottom: $m-size;
 
     @media (min-width : $desktop-breakpoint) {
+        align-items: center;
         flex-direction: row;
+        margin-bottom: $l-size;
     }
 }
 
 .input-group__item{
-    margin-right: $s-size;
+    margin-bottom: $s-size;
+
+    @media (min-width : $desktop-breakpoint) {
+        margin: 0 $s-size 0 0;
+    }
 }
