Styling bug fix for react-dates

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -21,4 +21,11 @@
     @media (max-width : $desktop-breakpoint) {
         width: 100%;
     }
+    @extend .form_button;
+}
+
+.form_button {
+    @media (max-width : $desktop-breakpoint) {
+        width: 100%;
+    }
 }
